--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,49 +31,50 @@ dependencies = [
     "uvicorn[standard]>=0.24.0",
     "pydantic>=2.5.0",
     "pydantic-settings>=2.1.0",
-    
+    "email-validator>=2.1.0",
+    # Authentication and security
+    "python-jose[cryptography]>=3.3.0",
+    "passlib[bcrypt]>=1.7.4",
+    "python-multipart>=0.0.6",
+    # Database dependencies
+    "aiosqlite>=0.19.0",
+    # Email dependencies
+    "aiosmtplib>=3.0.1",
+    "jinja2>=3.1.2",
     # MCP (Model Context Protocol) dependencies
     "mcp>=1.1.2",
-    
     # Document conversion dependencies
-    "weasyprint>=61.2",
+    # "weasyprint>=61.2",
     "markdown>=3.5.1",
     "python-markdown-math>=0.8",
     "pymdown-extensions>=10.5",
     "beautifulsoup4>=4.12.2",
     "lxml>=4.9.3",
-    
     # Office document processing
     "python-docx>=1.1.0",
     "openpyxl>=3.1.2",
     "python-pptx>=0.6.23",
     "pywin32>=306; sys_platform == 'win32'",
     "comtypes>=1.2.0; sys_platform == 'win32'",
-    
     # PDF and HTML processing
     "pypdf>=3.17.0",
     "pdfplumber>=0.10.0",
     "selenium>=4.15.0",
     "playwright>=1.40.0",
-    
     # Document comparison and analysis
     "python-Levenshtein>=0.25.0",
     "fuzzywuzzy>=0.18.0",
     "xmldiff>=2.6.3",
-    
     # File handling and utilities
     "python-multipart>=0.0.6",
     "aiofiles>=23.2.1",
     "Pillow>=10.1.0",
     "python-magic>=0.4.27",
-    
     # Logging and monitoring
     "structlog>=23.2.0",
     "rich>=13.7.0",
-    
     # Environment and configuration
     "python-dotenv>=1.0.0",
-    
     # Additional dependencies
     "python-json-logger>=2.0.7",
     "requests>=2.31.0",
